--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,48 @@
         {% endblock %}
     </head>
     <body>
+    <div class="container">
+    <header>
+        <div class="header-row lead">
+            <h1 class="display-3">Health<span class="text-danger">One</span></h1>
+        </div>
+    </header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="{{path('homepage')}}">SportCenter</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{path('categories')}}">sportapperaten </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">registreren </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">contact </a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">inloggen </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
         {% block body %}{% endblock %}
+    <hr>
+    <footer>
+    
+        <i class="bi bi-linkedin float-right img-thumbnail"></i>
+        <i class="bi bi-twitter float-right img-thumbnail"></i>
+        <i class="bi bi-pinterest float-right img-thumbnail"></i>
+
+        <p class="clear pb-3 text-muted text-center">Afdeling software development tinwerf 10, 2544 ED Den Haag.</p>
+
+    </footer>
+</div>
+        
     </body>
 </html>
